# rustcast

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  FEATURES.md  README.md  SECURITY.md  rust-toolchain.toml
.skills/: contributing.md
assets/macos/RustCast.app/Contents/: Info.plist
docs/: config.toml  default.toml  index.html  styles.css
migrations/: db_init.sql
scripts/: build-macos.sh  sign-macos.sh
src/: app.rs  clipboard.rs  commands.rs  config.rs  database.rs  debounce.rs  main.rs  quit.rs  styles.rs  unit_conversion.rs
src/app/: apps.rs  menubar.rs  tile.rs
src/app/pages/: clipboard.rs  settings.rs
src/app/tile/: elm.rs  update.rs
src/platform/: cross.rs  mod.rs
src/platform/macos/: discovery.rs  events.rs  input_source.rs  launching.rs  mod.rs
