[package]
name = "rustcast"
version = "0.7.2"
edition = "2024"
license = "MIT"
description = "RustCast - Productivity app for macOS"
homepage = "https://rustcast.app"
repository = "https://github.com/RustCastLabs/rustcast"

[dependencies]
arboard = "3.6.1"
block2 = "0.6.2"
crossbeam-channel = "0.5.15"
emojis = "0.8.0"
global-hotkey = "0.7.0"
hex = "0.4.3"
iced = { version = "0.14.0", features = ["image", "tokio"] }
icns = "0.3.1"
image = { version = "0.25.9", features = ["tiff"] }
libc = "0.2.180"
log = "0.4.29"
minreq = { version = "2.14.1", features = ["https"] }
objc2 = "0.6.3"
objc2-app-kit = { version = "0.3.2", features = ["NSImage"] }
objc2-application-services = { version = "0.3.2", default-features = false, features = ["HIServices", "Processes"] }
objc2-core-foundation = "0.3.2"
objc2-core-graphics = { version = "0.3.2", features = ["CGEvent", "CGEventTypes", "CGRemoteOperation", "CGEventSource", "libc"] }
objc2-event-kit = "0.3.2"
objc2-foundation = { version = "0.3.2", features = ["NSDateFormatter", "NSFormatter", "NSString"] }
objc2-service-management = "0.3.2"
once_cell = "1.21.3"
rand = "0.9.2"
rayon = "1.11.0"
rfd = "0.17.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.11.0"
tempfile = "3.27.0"
tokio = { version = "1.48.0", features = ["full"] }
toml = "0.9.8"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tray-icon = "0.21.3"
url = { version = "2.5.8", default-features = false }
zip = "8.5.1"

[dev-dependencies]
tempfile = "3.23.0"
zip = "8.5.1"
